corrected autoplay button z-index

--- a/src/scss/blocks/slider.scss
+++ b/src/scss/blocks/slider.scss
@@ -43,6 +43,7 @@
 	position: absolute;
 	bottom: 0;
 	right: 20px;
+	z-index: 2;
 
 	display: block;
 	width: 48px;
